# kaggle_LEAP_atmospheric_physics

./: .gitignore  READMEmd  pyproject.toml
ETL/: assemble_parquet.py  download_parquet.py  glue_assembly.py  glue_job.py  transform_script.py  transform_script_v1.py  upload_csv.py
models/: final_pipelinex.joblib  final_pipeliney.joblib
notebooks/: LEAP_pytorch_nn.ipynb  LEAP_visual_eda.ipynb  giba_baseline_xgboost.ipynb  leap_tf_simple_nn.ipynb
src/: 4x_reduced_data_while_preserving_99-9_variance.ipynb  baseline_xgb.py  data_conversion.py  eda.ipynb  eda_v1.ipynb  eda_v2.ipynb  eda_v3.ipynb  glue_job.py  lists.py  main.py  to_h5.py  upload_csv.py
tests/: gpu_testing.ipynb  tf_gpu_tests.ipynb
