[tool.poetry]
name = "kaggle-leap-atmospheric-physics"
version = "0.1.0"
description = "kaggle LEAP competition 2024"
package-mode = false
authors = ["Michael Kingston <71872141+mkingopng@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
kaggle = "^1.6.12"
polars = "^0.20.22"
pandas = "^2.2.2"
jupyter = "^1.0.0"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
tensorflow = "^2.16.1"
keras = "^3.3.3"
torch = "^2.3.0"
torchvision = "^0.18.0"
torchaudio = "^2.3.0"
xgboost = "^2.0.3"
scikit-learn = "^1.4.2"
pyarrow = "^16.0.0"
boto3 = "^1.34.97"
dask = {extras = ["dataframe"], version = "^2024.4.2"}
plotly = "^5.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
